Some changes related to about-me section component

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -53,7 +53,7 @@
   </head>
   <body>
     <!--[if lt IE 8]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a> to improve your experience.</p><![endif]-->
-    <header class="main-header">
+    <header class="main-header main-header__fixed">
       <div class="container">
         <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo__wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Site logo" width="94" height="28"></a>
           <h1 class="text-hidden">#Mateusz Archiciński</h1>
@@ -94,7 +94,7 @@
       <section class="section about-me-wrapper" id="about-me">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center">
-            <div class="section-decoration"><span class="icon icon-user section-decoration-icon"></span></div>
+            <div class="section-decoration"><span class="icon icon-2 icon-user section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="heading heading-2 heading-unique-1 text-center">About me</h2>
               <div class="heading-separator">
@@ -105,44 +105,62 @@
               <p class="section-header-description">Pełen zestaw informacji na mój temat</p>
             </header>
           </div>
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col-6">
-              <figure class="dev-face__wrapper"><img class="dev-face__img dev-face__img-rotate-28" src="../images/Mateusz-Archiciński_Front-End-Developer.jpg" alt="Mateusz Archiciński Avatar" width="190" height="190">
+              <figure class="dev-face__wrapper"><img class="dev-face__img dev-face__img-rotate-28" src="../images/Mateusz-Archiciński_Front-End-Developer.jpg" alt="Face photo of Mateusz Archiciński" width="190" height="190">
                 <figcaption class="dev-face__img-caption"><span class="dev-face__name">Mateusz Archiciński</span><span class="dev-face__profession">Front-End Developer</span></figcaption>
               </figure>
               <div class="about-me-section">
-                <header class="about-me-section-header">
-                  <h3>Profil</h3>
+                <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-user about-me-section-icon"></span><span class="filling-line"></span>
+                  <h3 class="heading heading-4 text-center">Profile</h3><span class="filling-line ending"></span>
                 </header>
+                <div class="about-me-section-body">
+                  <p>lorem ipsum</p>
+                </div>
               </div>
               <div class="about-me-section">
-                <header class="about-me-section-header">
-                  <h3>Informacje i kontakt</h3>
+                <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-phone about-me-section-icon"></span><span class="filling-line"></span>
+                  <h3 class="heading heading-4 text-center">Information<br>and contact</h3><span class="filling-line ending"></span>
                 </header>
+                <div class="about-me-section-body">
+                  <p>lorem ipsum</p>
+                </div>
               </div>
               <div class="about-me-section">
-                <header class="about-me-section-header">
-                  <h3>Atrybuty i cechy</h3>
+                <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-lightbulb about-me-section-icon"></span><span class="filling-line"></span>
+                  <h3 class="heading heading-4 text-center">Attributes<br>and qualities</h3><span class="filling-line ending"></span>
                 </header>
+                <div class="about-me-section-body">
+                  <p>lorem ipsum</p>
+                </div>
               </div>
             </div>
             <div class="col-6">
               <div class="about-me-section">
-                <header class="about-me-section-header">
-                  <h3>Edukacja</h3>
+                <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-star about-me-section-icon"></span><span class="filling-line"></span>
+                  <h3 class="heading heading-4 text-center">Education</h3><span class="filling-line ending"></span>
                 </header>
+                <div class="about-me-section-body">
+                  <p>lorem ipsum</p>
+                </div>
               </div>
               <div class="about-me-section">
-                <header class="about-me-section-header">
-                  <h3>Doświadczenie i kursy</h3>
+                <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-briefcase about-me-section-icon"></span><span class="filling-line"></span>
+                  <h3 class="heading heading-4 text-center">Experiences<br>and courses</h3><span class="filling-line ending"></span>
                 </header>
+                <div class="about-me-section-body">
+                  <p>lorem ipsum</p>
+                </div>
               </div>
             </div>
-            <div class="col-12">
+            <div class="col-8">
               <div class="about-me-section">
-                <header class="about-me-section-header">
-                  <h3>Umiejętności i technologie</h3>
+                <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-desktop about-me-section-icon"></span><span class="filling-line"></span>
+                  <h3 class="heading heading-4 text-center">Skills<br>and technologies</h3><span class="filling-line ending"></span>
                 </header>
+                <div class="about-me-section-body">
+                  <p>lorem ipsum</p>
+                </div>
               </div>
             </div>
           </div>
@@ -151,7 +169,7 @@
       <section class="section services-wrapper" id="services">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center">
-            <div class="section-decoration"><span class="icon icon-wrench section-decoration-icon"></span></div>
+            <div class="section-decoration"><span class="icon icon-2 icon-wrench section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="heading heading-2 heading-unique-1 text-center">Services</h2>
               <div class="heading-separator">
@@ -167,7 +185,7 @@
       <section class="section portfolio-wrapper" id="portfolio">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center">
-            <div class="section-decoration"><span class="icon icon-code section-decoration-icon"></span></div>
+            <div class="section-decoration"><span class="icon icon-2 icon-code section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="heading heading-2 heading-unique-1 text-center">Portfolio</h2>
               <div class="heading-separator">
@@ -183,7 +201,7 @@
       <section class="section contact-wrapper" id="contact">
         <div class="container">
           <div class="row no-gutters flex-column align-items-center">
-            <div class="section-decoration"><span class="icon icon-phone section-decoration-icon"></span></div>
+            <div class="section-decoration"><span class="icon icon-2 icon-phone section-decoration-icon"></span></div>
             <header class="section-header">
               <h2 class="heading heading-2 heading-unique-1 text-center">Contact</h2>
               <div class="heading-separator">
