Added a few new components to about-me section - Sass&Pug

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -115,7 +115,9 @@
                   <h3 class="heading heading-4 text-center">Profile</h3><span class="filling-line ending"></span>
                 </header>
                 <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                  <p class="text-bolded text-justify paragraph beginning">Cześć! Mam na imię Mateusz. Zajmuję się tworzeniem nowoczesnych stron internetowych w oparciu o technologie HTML, CSS i JavaScript.</p>
+                  <p class="text-justify paragraph">Swoją karierę zawodową powiązaną z zawodem Front-End Developera rozpocząłem na stanowisku Web Content Editora w jednej z Warszawskich korporacji interaktywnych. Wspomniane stanowisko umożliwiło mi wzięcie udziału w wielu ciekawych projektach/kampaniach prowadzonych dla różnych klientów z rynku Polskiego i zagranicznego. Miałem przyjemność poznać ciekawych ludzi i wiele się nauczyć.</p>
+                  <p class="text-justify paragraph ending">W chwili obecnej ponownie szukam zatrudnienia na stałe lub zdalnie w zależności od potrzeb klienta. Jeżeli jesteś zainteresowany/a współpraca skontaktuj się ze mną!</p>
                 </div>
               </div>
               <div class="about-me-section">
@@ -123,15 +125,49 @@
                   <h3 class="heading heading-4 text-center">Information<br>and contact</h3><span class="filling-line ending"></span>
                 </header>
                 <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                  <ul class="about-me-list">
+                    <li class="info-block">
+                      <div class="info-title text-bolded">Address:</div>
+                      <div class="info-description">Warsaw<span class="icon icon-location color-accent-light info-icon" aria-hidden="true"></span></div>
+                    </li>
+                    <li class="info-block">
+                      <div class="info-title text-bolded">Birth date:</div>
+                      <info-description>07-01-1993 yr.<span class="icon icon-birthday color-accent-light info-icon" aria-hidden="true"></span></info-description>
+                    </li>
+                    <li class="info-block">
+                      <div class="info-title text-bolded">E-mail:</div>
+                      <div class="info-description"><a class="about-me-link" href="mailto:mateusz.archicinski@gmail.com">mateusz.archicinski@gmail.com<span class="icon icon-mail-alt color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                    </li>
+                    <li class="info-block">
+                      <div class="info-title text-bolded">Website:</div>
+                      <div class="info-description"><a class="about-me-link" href="https://www.mateusz-archicinski.pl">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                    </li>
+                    <li class="info-block">
+                      <div class="info-title text-bolded">Phone:</div>
+                      <div class="info-description"><a class="about-me-link" href="tel:505-072-776">505-072-776<span class="icon icon-mobile color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="about-me-section">
                 <header class="row no-gutters align-items-center about-me-section-header"><span class="icon icon-15 icon-lightbulb about-me-section-icon"></span><span class="filling-line"></span>
                   <h3 class="heading heading-4 text-center">Attributes<br>and qualities</h3><span class="filling-line ending"></span>
                 </header>
-                <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                <div class="row no-gutters about-me-section-body text-center">
+                  <ul class="col-6 about-me-list about-me-list-titled" data-title="Jaki jestem ?">
+                    <li>Dokładny</li>
+                    <li>Odpowiedzialny</li>
+                    <li>Rzetelny</li>
+                    <li>Samodzielny</li>
+                    <li>Terminowy</li>
+                  </ul>
+                  <ul class="col-6 about-me-list about-me-list-titled" data-title="W czym jestem dobry ?">
+                    <li>Dzielę się wiedzą</li>
+                    <li>Potrafię szukać</li>
+                    <li>Przyjmuję krytykę</li>
+                    <li>Skupiam sie na celach</li>
+                    <li>Współpracuję w zespole, komunikuję się</li>
+                  </ul>
                 </div>
               </div>
             </div>
