Working on components: about-me section & timeline <new>"

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -132,19 +132,19 @@
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">Birth date:</div>
-                      <info-description>07-01-1993 yr.<span class="icon icon-birthday color-accent-light info-icon" aria-hidden="true"></span></info-description>
+                      <info-description>07.01.1993 yr.<span class="icon icon-birthday color-accent-light info-icon" aria-hidden="true"></span></info-description>
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">E-mail:</div>
-                      <div class="info-description"><a class="about-me-link" href="mailto:mateusz.archicinski@gmail.com">mateusz.archicinski@gmail.com<span class="icon icon-mail-alt color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description"><a class="info-link" href="mailto:mateusz.archicinski@gmail.com">mateusz.archicinski@gmail.com<span class="icon icon-mail-alt color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">Website:</div>
-                      <div class="info-description"><a class="about-me-link" href="https://www.mateusz-archicinski.pl">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description"><a class="info-link" href="https://www.mateusz-archicinski.pl">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">Phone:</div>
-                      <div class="info-description"><a class="about-me-link" href="tel:505-072-776">505-072-776<span class="icon icon-mobile color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description"><a class="info-link" href="tel:505-072-776">505-072-776<span class="icon icon-mobile color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                   </ul>
                 </div>
@@ -177,7 +177,20 @@
                   <h3 class="heading heading-4 text-center">Education</h3><span class="filling-line ending"></span>
                 </header>
                 <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                  <ul class="timeline__list">
+                    <li class="timeline-point"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
+                      <h4 class="timeline-point-title">Edukacja indywidualna</h4>
+                      <p class="timeline-point-description ending">Nauka zagadnień zwianych z szeroko pojętym front-endu internetowym i web designem.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">09.2012 - Obecnie</span>
+                      <h4 class="timeline-point-title">Wykształcenie: Wyższe</h4>
+                      <p class="timeline-point-description ending">Studia inżynierskie w Szkole Głównej Gospodarstwa Wiejskiego w Warszawie, kierunek: Informatyka, specjalizacja: Systemy komputerowe.</p>
+                    </li>
+                    <li class="timeline-point beginning"><span class="timeline-point-period beginning">09.2009 - 06.2012</span>
+                      <h4 class="timeline-point-title">Wykształcenie: Średnie</h4>
+                      <p class="timeline-point-description ending">Ukończenie nauki w Liceum Ogólnokształcącym im. Marii Sadzewiczowej w Łochowie na profilu matematyczno-informatycznym.</p>
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="about-me-section">
@@ -185,7 +198,32 @@
                   <h3 class="heading heading-4 text-center">Experiences<br>and courses</h3><span class="filling-line ending"></span>
                 </header>
                 <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                  <ul class="timeline__list">
+                    <li class="timeline-point"><span class="timeline-point-period beginning">01.2017 - Obecnie</span>
+                      <h4 class="timeline-point-title">Front-End Developer / Freelancer</h4>
+                      <p class="timeline-point-description">Wykonywanie różnego rodzaju zleceń zdalnie dla klientów pozyskanych za pośrednictwem sieci.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl">https://github.com/mateuszarchicinski/mateusz-archicinski.pl<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">04.2016 - 01.2017</span>
+                      <h4 class="timeline-point-title">Web Content Editor w K2 Internet S.A.</h4>
+                      <p class="timeline-point-description ending">Do głównych obowiązków zaliczało się obsługiwanie różnorodnych systemów zarządzania treścią w sieci, tworzenie stron kampanijno-produktowych typu landing page, long page i mailingów a także automatyzacja pracy za pomocą skryptów po stronie serwera/klienta js/nodejs.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">30.11.2015 - 18.12.2015</span>
+                      <h4 class="timeline-point-title">Pracownik biurowy / Praktykant</h4>
+                      <p class="timeline-point-description ending">Praktyka studencka odbywana w Głównym Urzędzie Statystycznym w Warszawie, wykonywane czynności: tester systemu szkoleń wewnętrznych dla pracowników GUS z dostępem do cms'a Moodle.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">02.11.2015 - 27.11.2015</span>
+                      <h4 class="timeline-point-title">Pracownik biurowy</h4>
+                      <p class="timeline-point-description ending">Zatrudnienie na umowe zlecenie w Kancelari Adwokackiej, wykonywane czynności: prace biurowe.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
+                      <h4 class="timeline-point-title">Projekty / W ramach nauki</h4>
+                      <p class="timeline-point-description">Wykonane i udostępnione projekty  w ramach nauki różnych technologii na moim Githubie.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski?tab=repositories">https://github.com/mateuszarchicinski?tab=repositories<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
+                    </li>
+                    <li class="timeline-point beginning"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
+                      <h4 class="timeline-point-title">Kursy internetowe</h4>
+                      <p class="timeline-point-description ending">Ukończenie dużej ilości kursów internetowych z zakresu: HTML5, Pug, CSS3, Less, Sass, Bootstrap, Materialize, Foundation, RWD, JS, jQuery, AngularJS, Angular Material, NodeJS, NPM, MongoDB, PHP, MySql, Git i Photoshop.</p>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
