--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -102,7 +102,7 @@
                 <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p class="section-header-description">Pełen zestaw informacji na mój temat</p>
+              <p class="section-header-description">Pełen zestaw informacji na mój temat.</p>
             </header>
           </div>
           <div class="row justify-content-center">
@@ -117,7 +117,7 @@
                 <div class="about-me-section-body">
                   <p class="text-bolded text-justify paragraph beginning">Cześć! Mam na imię Mateusz. Zajmuję się tworzeniem nowoczesnych stron internetowych w oparciu o technologie HTML, CSS i JavaScript.</p>
                   <p class="text-justify paragraph">Swoją karierę zawodową powiązaną z zawodem Front-End Developera rozpocząłem na stanowisku Web Content Editora w jednej z Warszawskich korporacji interaktywnych. Wspomniane stanowisko umożliwiło mi wzięcie udziału w wielu ciekawych projektach/kampaniach prowadzonych dla różnych klientów z rynku Polskiego i zagranicznego. Miałem przyjemność poznać ciekawych ludzi i wiele się nauczyć.</p>
-                  <p class="text-justify paragraph ending">W chwili obecnej ponownie szukam zatrudnienia na stałe lub zdalnie w zależności od potrzeb klienta. Jeżeli jesteś zainteresowany/a współpraca skontaktuj się ze mną!</p>
+                  <p class="text-justify paragraph ending">Obecnie ponownie szukam zatrudnienia na stałe lub zdalnie w zależności od potrzeb klienta. Jeżeli jesteś zainteresowany/a współpraca skontaktuj się ze mną!</p>
                 </div>
               </div>
               <div class="about-me-section">
@@ -132,19 +132,19 @@
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">Data urodzenia:</div>
-                      <info-description>07-01-1993 r.<span class="icon icon-birthday color-accent-light info-icon" aria-hidden="true"></span></info-description>
+                      <info-description>07.01.1993 r.<span class="icon icon-birthday color-accent-light info-icon" aria-hidden="true"></span></info-description>
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">E-mail:</div>
-                      <div class="info-description"><a class="about-me-link" href="mailto:mateusz.archicinski@gmail.com">mateusz.archicinski@gmail.com<span class="icon icon-mail-alt color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description"><a class="info-link" href="mailto:mateusz.archicinski@gmail.com">mateusz.archicinski@gmail.com<span class="icon icon-mail-alt color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">Strona internetowa:</div>
-                      <div class="info-description"><a class="about-me-link" href="https://www.mateusz-archicinski.pl">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description"><a class="info-link" href="https://www.mateusz-archicinski.pl">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                     <li class="info-block">
                       <div class="info-title text-bolded">Telefon:</div>
-                      <div class="info-description"><a class="about-me-link" href="tel:505-072-776">505-072-776<span class="icon icon-mobile color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description"><a class="info-link" href="tel:505-072-776">505-072-776<span class="icon icon-mobile color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                   </ul>
                 </div>
@@ -165,7 +165,7 @@
                     <li>Dzielę się wiedzą</li>
                     <li>Potrafię szukać</li>
                     <li>Przyjmuję krytykę</li>
-                    <li>Skupiam sie na celach</li>
+                    <li>Skupiam się na celach</li>
                     <li>Współpracuję w zespole, komunikuję się</li>
                   </ul>
                 </div>
@@ -177,7 +177,20 @@
                   <h3 class="heading heading-4 text-center">Edukacja</h3><span class="filling-line ending"></span>
                 </header>
                 <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                  <ul class="timeline__list">
+                    <li class="timeline-point"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
+                      <h4 class="timeline-point-title">Edukacja indywidualna</h4>
+                      <p class="timeline-point-description ending">Nauka zagadnień zwianych z szeroko pojętym front-endu internetowym i web designem.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">09.2012 - Obecnie</span>
+                      <h4 class="timeline-point-title">Wykształcenie: Wyższe</h4>
+                      <p class="timeline-point-description ending">Studia inżynierskie w Szkole Głównej Gospodarstwa Wiejskiego w Warszawie, kierunek: Informatyka, specjalizacja: Systemy komputerowe.</p>
+                    </li>
+                    <li class="timeline-point beginning"><span class="timeline-point-period beginning">09.2009 - 06.2012</span>
+                      <h4 class="timeline-point-title">Wykształcenie: Średnie</h4>
+                      <p class="timeline-point-description ending">Ukończenie nauki w Liceum Ogólnokształcącym im. Marii Sadzewiczowej w Łochowie na profilu matematyczno-informatycznym.</p>
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="about-me-section">
@@ -185,7 +198,32 @@
                   <h3 class="heading heading-4 text-center">Doświadczenie<br>i kursy</h3><span class="filling-line ending"></span>
                 </header>
                 <div class="about-me-section-body">
-                  <p>lorem ipsum</p>
+                  <ul class="timeline__list">
+                    <li class="timeline-point"><span class="timeline-point-period beginning">01.2017 - Obecnie</span>
+                      <h4 class="timeline-point-title">Front-End Developer / Freelancer</h4>
+                      <p class="timeline-point-description">Wykonywanie różnego rodzaju zleceń zdalnie dla klientów pozyskanych za pośrednictwem sieci.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl">https://github.com/mateuszarchicinski/mateusz-archicinski.pl<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">04.2016 - 01.2017</span>
+                      <h4 class="timeline-point-title">Web Content Editor w K2 Internet S.A.</h4>
+                      <p class="timeline-point-description ending">Do głównych obowiązków zaliczało się obsługiwanie różnorodnych systemów zarządzania treścią w sieci, tworzenie stron kampanijno-produktowych typu landing page, long page i mailingów a także automatyzacja pracy za pomocą skryptów po stronie serwera/klienta js/nodejs.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">30.11.2015 - 18.12.2015</span>
+                      <h4 class="timeline-point-title">Pracownik biurowy / Praktykant w GUS</h4>
+                      <p class="timeline-point-description ending">Praktyka studencka odbywana w Głównym Urzędzie Statystycznym w Warszawie, wykonywane czynności: tester systemu szkoleń wewnętrznych dla pracowników GUS z dostępem do cms'a Moodle.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">02.11.2015 - 27.11.2015</span>
+                      <h4 class="timeline-point-title">Pracownik biurowy w Kancelarii Adwokackiej</h4>
+                      <p class="timeline-point-description ending">Zatrudnienie na umowe zlecenie w Kancelarii Adwokackiej, wykonywane czynności: prace biurowe.</p>
+                    </li>
+                    <li class="timeline-point"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
+                      <h4 class="timeline-point-title">Projekty / W ramach nauki</h4>
+                      <p class="timeline-point-description">Wykonane i udostępnione projekty  w ramach nauki różnych technologii na moim Githubie.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski?tab=repositories">https://github.com/mateuszarchicinski?tab=repositories<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
+                    </li>
+                    <li class="timeline-point beginning"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
+                      <h4 class="timeline-point-title">Kursy internetowe</h4>
+                      <p class="timeline-point-description ending">Ukończenie dużej ilości kursów internetowych z zakresu: HTML5, Pug, CSS3, Less, Sass, Bootstrap, Materialize, Foundation, RWD, JS, jQuery, AngularJS, Angular Material, NodeJS, NPM, MongoDB, PHP, MySql, Git i Photoshop.</p>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -213,7 +251,7 @@
                 <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p class="section-header-description">Sprawdź co mogę ci zaoferować</p>
+              <p class="section-header-description">Sprawdź co mogę ci zaoferować.</p>
             </header>
           </div>
         </div>
@@ -229,7 +267,7 @@
                 <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p class="section-header-description">Stworzone przeze mnie projekty, samodzielnie jak i w grupie</p>
+              <p class="section-header-description">Stworzone przeze mnie projekty, samodzielnie jak i w grupie.</p>
             </header>
           </div>
         </div>
@@ -245,7 +283,7 @@
                 <div class="heading-separator__square primary"></div>
                 <div class="heading-separator__line"></div>
               </div>
-              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną</p>
+              <p class="section-header-description">Jeżeli masz jakieś pytania skontaktuj się zemną.</p>
             </header>
           </div>
         </div>
